# learning_cmake

./: CMakeLists.txt  License.txt  README.md  build.sh  config.h.in  main.cpp
math/: CMakeCache.txt  CMakeLists.txt  math_function.cpp  math_functions.h
